--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,20 @@
     transform: rotate(360deg);
   }
 }
+
+
+code{
+  display: inline-block;
+  padding: 10px;
+  border: solid 1px gray;
+  border-radius: 5px;
+}
+
+button{
+  padding: 10px 20px;
+  background-color: lightblue;
+  border:none;
+  border-radius: 5px;
+  margin: 0 10px;
+  cursor: pointer;
+}
