--- a/src/App.css
+++ b/src/App.css
@@ -53,3 +53,12 @@ button{
   margin: 0 10px;
   cursor: pointer;
 }
+button.multi-dev{
+  background-color: lightcoral;
+}
+.counter.positive{
+  background-color: lightgreen;
+}
+.counter.negative{
+  background-color: orange;
+}
